--- a/artemis-core-client/pom.xml
+++ b/artemis-core-client/pom.xml
@@ -86,6 +86,11 @@
       </dependency>
       <dependency>
          <groupId>io.netty</groupId>
+         <artifactId>netty-tcnative</artifactId>
+         <classifier>${os.detected.classifier}</classifier>
+      </dependency>
+      <dependency>
+         <groupId>io.netty</groupId>
          <artifactId>netty-transport-native-epoll</artifactId>
          <classifier>${netty-transport-native-epoll-classifier}</classifier>
       </dependency>
@@ -118,6 +123,7 @@
          <groupId>io.netty</groupId>
          <artifactId>netty-common</artifactId>
       </dependency>
+
    </dependencies>
 
    <profiles>
